# TutorOffice-backend

./: .gitignore  Dockerfile  ReadMe.md  pyproject.toml  requirments.txt  setup.cfg
.github/workflows/: deploy_to_server.yaml  docs.yaml
core/: .env  bash.exe.stackdump  postgres  requirments.txt
core/chats/: filters.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/chats/migrations/: 0001_initial.py  0002_alter_chat_teacher_student.py  0002_alter_message_sender.py  0002_rename_teacher_student_homework_teacher_student_and_more.py  0003_alter_homework_subject_alter_homework_teacher_and_more.py
core/clients/: admin.py  apps.py  forms.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
core/clients/migrations/: 0001_initial.py  0002_alter_teacher_students_alter_teacher_subjects_and_more.py  0002_alter_user_managers_rename_profile_student_user_and_more.py  0003_alter_teacherstudent_first_name_and_more.py  0003_alter_teacherstudent_options_and_more.py  0004_alter_teacherstudent_email_and_more.py  0005_remove_teacherstudent_verify_teacherstudent_bind.py  0006_alter_teacherstudent_bind.py  0007_alter_student_options_alter_teacher_options_and_more.py  0008_alter_teacherstudent_comment_and_more.py  0009_alter_user_photo.py  0010_alter_user_photo.py  0011_remove_teacherstudent_comment_teacherstudent_level_and_more.py  0015_feedback.py  (+4 more)
core/common/: filters.py  permissions.py  serializers.py
core/core/: .env  __init__.py  celery.py  settings.py  urls.py
core/lessons/: admin.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
core/materials/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
docker/: README.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml
docs/: openapi-schema.yaml  test
nginx/: Dockerfile  nginx.conf
(+28 files in other folders)
